# marketing-intelligence

./: .gitignore  PROJECT_DOCUMENTARY.md  PROJECT_REPORT.md  README.md  benchmark_scenarios.json  deterministic_config.json  inspect_kb.py  marketing_agents.config.json  pyproject.toml  update_kb.py
knowledge_base/: ai_productivity_brand.md  automotive_service_brand.md  b2b_logistics_brand.md  b2b_saas_crm_brand.md  coffee_subscription_brand.md  cybersecurity_saas_brand.md  ecommerce_skincare_brand.md  edu_tech_brand.md  enterprise_analytics_brand.md  event_planning_brand.md  fintech_budgeting_brand.md  fitness_studio_brand.md  gaming_app_brand.md  healthcare_clinic_brand.md  home_services_brand.md  hr_recruiting_saas_brand.md  legal_services_brand.md  marketplace_freelance_brand.md  mental_wellness_app_brand.md  nonprofit_donation_brand.md  online_course_creator_brand.md  pet_care_ecommerce_brand.md  real_estate_agent_brand.md  restaurant_cafe_brand.md  sample_brand.md  sustainable_fashion_brand.md  travel_hotel_brand.md
marketing-agent-v2/: manual_test.py  pyproject.toml  test_env.py  test_headless.py
marketing-agent-v2/app/: __init__.py  config.py  database.py
marketing-agent-v2/app/models/: __init__.py  research.py
marketing-agent-v2/app/schemas/: __init__.py  research.py
marketing-agent-v2/app/services/: __init__.py  debug_persistence.py  headless_scraper.py  llm_client.py  preprocessor.py  research_agent.py  scraper.py
marketing-agent-v2/data/: marketing_v2.db
marketing-agent-v2/tests/: __init__.py  smoke_test_db.py  test_headless_fallback.py  test_llm_client.py  test_preprocessor.py  test_research_agent.py  test_research_benchmarks.py  test_scraper.py
prompts/: content_agent.md  creative_review.md  research_agent.md  strategy_agent.md
src/marketing_agents/: __init__.py  agents.py  benchmark.py  benchmark_ab.py  brand_facts.py  cli.py  config.py  contracts.py  evaluation.py  exporters.py  goal_translator.py  json_contracts.py  llm.py  memory.py  model_factory.py  observability.py  pipeline.py  prompts.py  rag.py  safety.py  validation.py
tests/: test_pipeline.py
