[project]
name = "multi-agent-marketing-system"
version = "0.1.0"
description = "A v1 three-agent marketing campaign generator with contracts, local RAG, safety checks, validation, and observability."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
marketing-agents = "marketing_agents.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

