[project]
name = "multi-agent-marketing-system"
version = "0.1.0"
description = "A v5 three-agent marketing campaign generator with benchmarks, prompts, optional HTTP JSON model support, exports, chunk-level RAG, safety checks, and observability."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
marketing-agents = "marketing_agents.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
