[project]
name = "multi-agent-marketing-system"
version = "0.1.0"
description = "A V7 hybrid-RAG three-agent marketing campaign generator with benchmarks, prompts, optional HTTP JSON model support, exports, safety checks, and observability."
requires-python = ">=3.10"
dependencies = ["python-dotenv>=1.0", "chromadb>=0.4.0", "sentence-transformers>=2.2.0"]

[project.scripts]
marketing-agents = "marketing_agents.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
